feat: fix api and add images for exhibition
