# dobriy-react-app/gen/api/src/apis/DefaultApi.ts
@@ -1,7 +1,7 @@
 /* tslint:disable */
 /* eslint-disable */
 /**
- * Film weekly service
+ * Museum
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
  * The version of the OpenAPI document: 0.1.0
@@ -18,9 +18,12 @@ import {
     ErrorResponse,
     ErrorResponseFromJSON,
     ErrorResponseToJSON,
+    Picture,
+    PictureFromJSON,
+    PictureToJSON,
 } from '../models';
 
-export interface MapRequest {
+export interface PictureRequest {
     date?: string;
 }
 
@@ -30,9 +33,9 @@ export interface MapRequest {
 export class DefaultApi extends runtime.BaseAPI {
 
     /**
-     * Returns list of musical city musicevents
+     * Returns list of pictures with description of them
      */
-    async mapRaw(requestParameters: MapRequest): Promise<runtime.ApiResponse<Array<any>>> {
+    async pictureRaw(requestParameters: PictureRequest): Promise<runtime.ApiResponse<Array<Picture>>> {
         const queryParameters: any = {};
 
         if (requestParameters.date !== undefined) {
@@ -42,20 +45,20 @@ export class DefaultApi extends runtime.BaseAPI {
         const headerParameters: runtime.HTTPHeaders = {};
 
         const response = await this.request({
-            path: `/map`,
+            path: `/exhibition`,
             method: 'GET',
             headers: headerParameters,
             query: queryParameters,
         });
 
-        return new runtime.JSONApiResponse<any>(response);
+        return new runtime.JSONApiResponse(response, (jsonValue) => jsonValue.map(PictureFromJSON));
     }
 
     /**
-     * Returns list of musical city musicevents
+     * Returns list of pictures with description of them
      */
-    async map(requestParameters: MapRequest): Promise<Array<any>> {
-        const response = await this.mapRaw(requestParameters);
+    async picture(requestParameters: PictureRequest): Promise<Array<Picture>> {
+        const response = await this.pictureRaw(requestParameters);
         return await response.value();
     }
 
