# dobriy-react-app/gen/api/src/models/Picture.ts
@@ -1,7 +1,7 @@
 /* tslint:disable */
 /* eslint-disable */
 /**
- * Film weekly service
+ * Museum
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
  * The version of the OpenAPI document: 0.1.0
@@ -16,60 +16,60 @@ import { exists, mapValues } from '../runtime';
 /**
  * 
  * @export
- * @interface ModelMap
+ * @interface Picture
  */
-export interface ModelMap {
+export interface Picture {
     /**
      * 
      * @type {string}
-     * @memberof ModelMap
-     */
-    name?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof ModelMap
+     * @memberof Picture
      */
     title?: string;
     /**
      * 
      * @type {string}
-     * @memberof ModelMap
+     * @memberof Picture
      */
-    price?: string;
+    author?: string;
     /**
      * 
      * @type {string}
-     * @memberof ModelMap
+     * @memberof Picture
      */
-    sits?: string;
+    year?: string;
     /**
      * 
      * @type {string}
-     * @memberof ModelMap
+     * @memberof Picture
+     */
+    description?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof Picture
      */
     date: string;
 }
 
-export function ModelMapFromJSON(json: any): ModelMap {
-    return ModelMapFromJSONTyped(json, false);
+export function PictureFromJSON(json: any): Picture {
+    return PictureFromJSONTyped(json, false);
 }
 
-export function ModelMapFromJSONTyped(json: any, ignoreDiscriminator: boolean): ModelMap {
+export function PictureFromJSONTyped(json: any, ignoreDiscriminator: boolean): Picture {
     if ((json === undefined) || (json === null)) {
         return json;
     }
     return {
         
-        'name': !exists(json, 'name') ? undefined : json['name'],
         'title': !exists(json, 'title') ? undefined : json['title'],
-        'price': !exists(json, 'price') ? undefined : json['price'],
-        'sits': !exists(json, 'sits') ? undefined : json['sits'],
+        'author': !exists(json, 'author') ? undefined : json['author'],
+        'year': !exists(json, 'year') ? undefined : json['year'],
+        'description': !exists(json, 'description') ? undefined : json['description'],
         'date': json['date'],
     };
 }
 
-export function ModelMapToJSON(value?: ModelMap | null): any {
+export function PictureToJSON(value?: Picture | null): any {
     if (value === undefined) {
         return undefined;
     }
@@ -78,10 +78,10 @@ export function ModelMapToJSON(value?: ModelMap | null): any {
     }
     return {
         
-        'name': value.name,
         'title': value.title,
-        'price': value.price,
-        'sits': value.sits,
+        'author': value.author,
+        'year': value.year,
+        'description': value.description,
         'date': value.date,
     };
 }
