# dobriy-react-app/gen/api/src/models/index.ts
@@ -1,2 +1,2 @@
 export * from './ErrorResponse';
-export * from './ModelMap';
+export * from './Picture';
